GRBK-640 : Resolving FindBugs issues.